--- a/JsfDersleri/web/index.xhtml
+++ b/JsfDersleri/web/index.xhtml
@@ -6,7 +6,7 @@
         <title>Facelet Title</title>
     </h:head>
     <h:body>
-        Hello from Facelets
+        #{giris.yazdir}
     </h:body>
 </html>
 
